--- a/templates/newpage-desktop.html
+++ b/templates/newpage-desktop.html
@@ -5,6 +5,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="favicon.png">
         <title>ph3b3</title>
     </head>
     <body>
