--- a/templates/newpage-mobile.html
+++ b/templates/newpage-mobile.html
@@ -4,6 +4,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="icon" href="../favicon.png">
         <link rel="stylesheet" href="style.css">
         <title>ph3b3</title>
     </head>
