--- a/templates/stories-mobile.html
+++ b/templates/stories-mobile.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>story title</title>
-        <link rel="icon" href="../favicon.png">
+        <link rel="icon" href="../../favicon.png">
         <link rel="stylesheet" href="../style.css">
     </head>
     <body>
