--- a/templates/newpage-mobile.html
+++ b/templates/newpage-mobile.html
@@ -15,6 +15,7 @@
                     <a href="index.html">home</a><br>
                     <a href="https://soundcloud.com/ph3b3">music</a><br>
                     <a href="https://github.com/phoebe-leong/?tab=repositories">github</a><br>
+                    <a href="https://ph3b3.carrd.co/">socials</a><br>
                     <a href="stories.html">stories</a><br>
                 </ul>
             </nav><br><br><br><br><br>
