--- a/templates/stories-desktop.html
+++ b/templates/stories-desktop.html
@@ -5,16 +5,25 @@
         <title>story title</title>
         <link rel="icon" href="favicon.png">
         <link rel="stylesheet" href="../style.css">
+
+        <script src="../theme.js"></script>
+        <script>
+            window.onload = function() {
+                loadThemes()
+            }
+        </script>
     </head>
     <body>
         <main>
             <nav>
                 <ul>
                     <a href="../index.html">home</a>
-                    <a href="https://soundcloud.com/ph3b3">music</a>
-                    <a href="https://github.com/phoebe-leong/?tab=repositories">github</a>
-                    <a href="https://ph3b3.carrd.co/">socials</a>
-                    <a href="../stories.html">stories</a>
+                    <a href="https://soundcloud.com/ph3b3" target="_blank">music</a>
+                    <a href="https://github.com/phoebe-leong/?tab=repositories" target="_blank">github</a>
+                    <a href="https://ph3b3.carrd.co/" target="_blank">socials</a>
+                    <a href="../stories.html" target="_blank">stories</a>
+
+                    <a id="theme-button" onclick="toggle()">change theme</a>
                 </ul>
             </nav><br><br><br><br><br>
             <h2>
