--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /* -- Fonts -- */
 @font-face {
     font-family: 'Bold';
@@ -12,8 +11,7 @@
 
 * {
     color: #FCF1F1;
-    background-color: #16171A;
-    padding-left: 10px;
+    margin-left: 10px;
 }
 
 h1 {
@@ -23,6 +21,7 @@ h1 {
 /* Makes the navigation text space out a little bit more */
 nav, h2, h1 {
     font-family: 'Bold';
+    margin-right: 20px;
 }
 
 a:hover, a:focus {
@@ -36,6 +35,7 @@ p, li, a {
 
 ul {
     list-style-type: none;
+    padding: 0px;
 }
 
 button {
@@ -59,4 +59,31 @@ footer {
 
 footer p {
     font-size: 13px;
+}
+
+/* Button to toggle theme */
+#theme-button {
+    float: right;
+    text-decoration: underline;
+}
+
+#theme-button:hover {
+    cursor: pointer;
+    text-decoration: none;
+}
+
+/* Light Theme */
+
+#theme-light * {
+    color: #16171A;
+    /* Background colour is set with JavaScript */
+}
+
+#theme-light button {
+    border: 2px solid #16171A;
+}
+
+#theme-light button:hover {
+    color: #FCF1F1;
+    background-color: #1A1C21;
 }
