--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* -- Fonts -- */
 @font-face {
     font-family: 'Bold';
     src: url(Fonts/RobotoMono-Bold.ttf);
@@ -11,11 +10,24 @@
 
 * {
     color: #FCF1F1;
-    margin-left: 10px;
+}
+
+html {
+    background-color: #212226;
+    cursor: pointer;
+}
+
+body {
+    cursor: auto;
 }
 
 h1 {
-    font-size: 100px;
+    font-size: 50px;
+    margin-left: 30px;
+}
+
+section {
+    margin-left: 30px;
 }
 
 /* Makes the navigation text space out a little bit more */
@@ -24,7 +36,32 @@ nav, h2, h1 {
     margin-right: 20px;
 }
 
+#home {
+    margin-top: 300px;
+    user-select: none;
+}
+
+#home a {
+    font-size: 30px;
+    margin-right: 10px;
+
+    cursor: pointer;
+}
+
+ul li {
+    margin-bottom: 5px;
+}
+
 a:hover, a:focus {
+    text-decoration: none;
+}
+
+.socials {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.socials:hover {
     text-decoration: none;
 }
 
@@ -41,9 +78,13 @@ ul {
 button {
     border: 2px solid #FCF1F1;
     cursor: pointer;
+
     width: 110px;
     height: 50px;
+
     font-family: 'Regular';
+    font-size: 15px;
+
     text-align: center;
     background-color: transparent;
 }
@@ -51,6 +92,12 @@ button {
 button:hover {
     color: #1A1C21;
     background-color: #FCF1F1;
+}
+
+.samAndGreta {
+    margin-right: 5px;
+
+    width: 120px;
 }
 
 footer {
@@ -61,29 +108,20 @@ footer p {
     font-size: 13px;
 }
 
-/* Button to toggle theme */
-#theme-button {
-    float: right;
-    text-decoration: underline;
+#errText {
+    padding: 0;
+    margin: 0;
+
+    margin-top: 100px;
 }
 
-#theme-button:hover {
-    cursor: pointer;
-    text-decoration: none;
+#errText h1 {
+    padding: 0;
+    margin: 0;
+
+    font-size: 100px;
 }
 
-/* Light Theme */
-
-#theme-light * {
-    color: #16171A;
-    /* Background colour is set with JavaScript */
-}
-
-#theme-light button {
-    border: 2px solid #16171A;
-}
-
-#theme-light button:hover {
-    color: #FCF1F1;
-    background-color: #1A1C21;
+#errText p {
+    font-size: 25px;
 }
